--- a/requirements.txt
+++ b/requirements.txt
@@ -1,6 +1,10 @@
 cachetools==5.3.3
 certifi==2024.2.2
 charset-normalizer==3.3.2
+contourpy==1.2.1
+cycler==0.12.1
+docutils==0.21.2
+fonttools==4.51.0
 google-api-core==2.19.0
 google-api-python-client==2.129.0
 google-auth==2.29.0
@@ -8,14 +12,26 @@ google-auth-httplib2==0.2.0
 googleapis-common-protos==1.63.0
 httplib2==0.22.0
 idna==3.7
+isodate==0.6.1
+kiwisolver==1.4.5
+matplotlib==3.9.0
+numpy==1.26.4
+packaging==24.0
+pandas==2.2.2
+pillow==10.3.0
 proto-plus==1.23.0
 protobuf==4.25.3
 pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pyparsing==3.1.2
-python-dotenv==0.19.2
+python-dateutil==2.9.0.post0
+pytz==2024.1
 requests==2.31.0
 rsa==4.9
+six==1.16.0
+statistics==1.0.3.5
+tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
+vaderSentiment==3.3.2
 youtube-transcript-api==0.6.2
