--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,8 @@
+aiohttp==3.9.5
+aiosignal==1.3.1
+alpha-vantage==2.3.1
+async-timeout==4.0.3
+attrs==23.2.0
 beautifulsoup4==4.12.3
 bs4==0.0.2
 cachetools==5.3.3
@@ -8,6 +13,7 @@ cycler==0.12.1
 docutils==0.21.2
 filelock==3.14.0
 fonttools==4.51.0
+frozenlist==1.4.1
 fsspec==2024.5.0
 google-api-core==2.19.0
 google-api-python-client==2.129.0
@@ -23,6 +29,7 @@ kiwisolver==1.4.5
 MarkupSafe==2.1.5
 matplotlib==3.9.0
 mpmath==1.3.0
+multidict==6.0.5
 networkx==3.3
 numpy==1.26.4
 packaging==24.0
@@ -34,6 +41,7 @@ pyasn1==0.6.0
 pyasn1_modules==0.4.0
 pyparsing==3.1.2
 python-dateutil==2.9.0.post0
+python-dotenv==1.0.1
 pytz==2024.1
 PyYAML==6.0.1
 regex==2024.5.15
@@ -45,6 +53,7 @@ soupsieve==2.5
 statistics==1.0.3.5
 sympy==1.12
 tokenizers==0.19.1
+torch==2.3.0
 tqdm==4.66.4
 transformers==4.41.0
 typing_extensions==4.11.0
@@ -52,4 +61,5 @@ tzdata==2024.1
 uritemplate==4.1.1
 urllib3==2.2.1
 vaderSentiment==3.3.2
+yarl==1.9.4
 youtube-transcript-api==0.6.2
